# raven-hydro

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CHANGES.md  CMakeLists.txt  LICENSE  README.md  environment.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: FEATURE-REQUEST.yml
.github/workflows/: auto-accept-ci-changes.yml  cache-cleaner.yml  main.yml  publish-pypi.yml  tag-testpypi.yml
CI/: requirements_ci.in  requirements_ci.txt
helpers/: FindNetCDF.cmake
src/: main.cpp
src/raven/: __init__.py
src/raven_hydro/: __init__.py  _version.py
