[build-system]
requires = ["scikit-build-core", "pybind11", "hatchling", "hatch-fancy-pypi-readme"]
build-backend = "scikit_build_core.build"

[project]
name = "raven-hydro"
authors = [
  {name = "Trevor James Smith", email = "smith.trevorj@ouranos.ca"}
]
description = "A Python wrapper to set-up and build the hydrologic modelling framework Raven."
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Hydrology"
]
keywords = ["raven", "hydrologic", "model", "cmake"]
dynamic = ["readme"]
version = "0.3.0"
dependencies = []

[project.urls]
"About Ouranos" = "https://www.ouranos.ca/en"
"About Raven" = "http://raven.uwaterloo.ca/About.html"
"Homepage" = "https://github.com/Ouranosinc/raven-hydro"
"Issue tracker" = "https://github.com/Ouranosinc/raven-hydro/issues"

[tool]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"
start-after = "<!-- cut after this -->\n\n"
end-before = "\n\n<!-- but before this -->"

[tool.scikit-build]
build-dir = "build"
experimental = true

[tool.scikit-build.cmake]
minimum-version = "3.24"
build-type = "Release"
verbose = true

[tool.scikit-build.cmake.define]
USE_NETCDF = true
HELPERS = "helpers"
ALWAYS_DOWNLOAD = false
RAVEN_VERSION = "3.8"
RAVEN_GIT_REPO = "https://github.com/CSHS-CWRA/RavenHydroFramework"
RAVEN_GIT_TAG = "d90233bf2a3ef3839f339900489fa06e355813ec"

[tool.scikit-build.metadata]
readme.provider = "scikit_build_core.metadata.fancy_pypi_readme"

[tool.scikit-build.sdist]
include = [
  "./CMakeLists.txt",
  "AUTHORS.md",
  "CHANGES.md",
  "LICENSE",
  "README.md",
  "helpers/FindNetCDF.cmake",
  "src/main.cpp",
  "src/raven_hydro/__init__.py",
  "src/RavenHydroFramework"
]
exclude = [".*", "build", "dist", "environment.yml", "Raven_errors.txt"]

[tool.scikit-build.wheel]
install-dir = "raven-hydro"
expand-macos-universal-tags = true
