[build-system]
requires = [
  "hatch-fancy-pypi-readme",
  "hatchling",
  "pybind11",
  "scikit-build-core>=0.8",
  "setuptools_scm>=8"
]
build-backend = "scikit_build_core.build"

[project]
name = "raven-hydro"
authors = [
  {name = "Trevor James Smith", email = "smith.trevorj@ouranos.ca"}
]
description = "A Python wrapper to set-up and build the hydrologic modelling framework Raven."
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Hydrology"
]
keywords = ["raven", "hydrologic", "model", "cmake"]
dynamic = ["readme", "version"]
dependencies = []

[project.urls]
"About Ouranos" = "https://www.ouranos.ca/en"
"About Raven" = "http://raven.uwaterloo.ca/About.html"
"Homepage" = "https://github.com/Ouranosinc/raven-hydro"
"Issue tracker" = "https://github.com/Ouranosinc/raven-hydro/issues"

[tool]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"
start-after = "<!-- cut after this -->\n\n"
end-before = "\n\n<!-- but before this -->"

[tool.scikit-build]
build-dir = "build"
experimental = true
minimum-version = "0.8"

[tool.scikit-build.cmake]
version = ">=3.26.0"
build-type = "Debug"
verbose = true

[tool.scikit-build.cmake.define]
# specify whether to download the files even in the git submodule has been initialized and pulled
ALWAYS_DOWNLOAD = false
# trigger the exe building block in the CMakeLists.txt
COMPILE_EXE = true
# trigger the library building block in the CMakeLists.txt (NOT YET IMPLEMENTED)
COMPILE_LIB = false
# trigger the python library building block in the CMakeLists.txt
PYTHON = true
# the folder where the netcdf finding script is located
HELPERS = "helpers"
# the git repository to download the RavenHydroFramework from and the tag to check out
RAVEN_GIT_REPO = "https://github.com/CSHS-CWRA/RavenHydroFramework"
RAVEN_GIT_TAG = "932feca9c281ca079e5567a3db096242440e018e"
# specify whether to use the netcdf library
USE_NETCDF = true

[tool.scikit-build.logging]
level = "DEBUG"

[tool.scikit-build.metadata]
readme.provider = "scikit_build_core.metadata.fancy_pypi_readme"
version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.scikit-build.sdist]
include = [
  "AUTHORS.md",
  "CHANGES.md",
  "CMakeLists.txt",
  "LICENSE",
  "README.md",
  "helpers/FindNetCDF.cmake",
  "RavenHydroFramework/AUTHORS.md",
  "RavenHydroFramework/LICENSE",
  "RavenHydroFramework/README.md",
  "RavenHydroFramework/src",
  "src/raven_hydro/__init__.py",
  "src/raven_hydro/_version.py"
]
exclude = [
  ".*",
  "build",
  "dist",
  "environment.yml",
  "Raven_errors.txt",
  "RavenHydroFramework/benchmarking"
]

[tool.scikit-build.wheel]
expand-macos-universal-tags = true
license-files = ["LICENSE", "RavenHydroFramework/LICENSE"]

[tool.setuptools_scm] # Section required
write_to = "src/raven_hydro/_version.py"
